--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -5,7 +5,7 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-    <%= link_to prototype.user_id, prototype_path(prototype.id), class: :card__user %>
+    <%= link_to prototype.user.name, user_path(prototype.user), class: :card__user %>
 
   </div>
 </div>
